[gd_scene load_steps=10 format=3 uid="uid://boxab8wn46dwo"]

[ext_resource type="Script" uid="uid://dkiiajh4d3jw7" path="res://scripts/board.gd" id="1_nglv8"]
[ext_resource type="PackedScene" uid="uid://c68aixltfkfwo" path="res://scenes/player.tscn" id="2_fv4ni"]
[ext_resource type="PackedScene" uid="uid://cx7qqd60jbbvo" path="res://scenes/ball.tscn" id="3_dun80"]
[ext_resource type="FontFile" uid="uid://cjybocrr7pjto" path="res://assets/chars.webp" id="3_dxjtj"]
[ext_resource type="PackedScene" uid="uid://copxuoxrfvn2" path="res://scenes/field.tscn" id="4_fv4ni"]
[ext_resource type="PackedScene" uid="uid://ckkhsf5miij1n" path="res://game_ui.tscn" id="6_dun80"]

[sub_resource type="LabelSettings" id="LabelSettings_vf5bc"]
font = ExtResource("3_dxjtj")
font_size = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxjtj"]
size = Vector2(9, 298)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dun80"]
size = Vector2(10, 298.5)

[node name="board" type="Node2D"]
script = ExtResource("1_nglv8")
player_x_padding = 15

[node name="player" parent="." instance=ExtResource("2_fv4ni")]
visible = false
position = Vector2(43, 43)
scale = Vector2(2, 2)

[node name="player_2" parent="." instance=ExtResource("2_fv4ni")]
visible = false
position = Vector2(496, 43)
scale = Vector2(2, 2)
player_order = 2

[node name="ball" parent="." instance=ExtResource("3_dun80")]
visible = false
modulate = Color(0.980392, 0.815686, 0, 1)
self_modulate = Color(1, 1, 0, 1)
position = Vector2(240, 130)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 300.0
offset_top = 2.0
offset_right = 366.0
offset_bottom = 24.0
text = "GAME"
label_settings = SubResource("LabelSettings_vf5bc")

[node name="Field" parent="." instance=ExtResource("4_fv4ni")]
z_index = -50

[node name="WaitAfterScore" type="Timer" parent="."]
wait_time = 3.0

[node name="PlayerOneScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOneScoreArea"]
position = Vector2(474.5, 160)
shape = SubResource("RectangleShape2D_dxjtj")

[node name="PlayerTwoScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTwoScoreArea"]
position = Vector2(5, 160.75)
shape = SubResource("RectangleShape2D_dun80")

[node name="GameUI" parent="." instance=ExtResource("6_dun80")]

[connection signal="timeout" from="WaitAfterScore" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerOneScoreArea" to="." method="_on_player_one_score_area_body_entered"]
[connection signal="body_entered" from="PlayerTwoScoreArea" to="." method="_on_player_two_score_area_body_entered"]
[connection signal="start_game" from="GameUI" to="." method="new_game"]
